# r.trainee-2022

./: .gitignore  Package.py  Parser.py  Procfile  README.md  TOML_Parser.py  api.py  app.py  pyproject.toml  requirements.txt  tomlparser.py
app/: app.py  routes.py
static/styles/: style.css
templates/: data.html  index.html  upload.html
tests/: PackageTest.py  ParserTest.py  test_package.py  test_parser.py
tomlparser/: package.py  tomlparser.py
tomlparser/tests/: test_package.py  test_tomlparser.py
