[tool.poetry]
name = "poetryvis"
version = "0.1.0"
description = "Poetry.lock parser and visualizer - Pre-Assignment for reaktor trainee fall 2022"
authors = ["jugipe <https://github.com/jugipe>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
